--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     }
     defaultConfig {
         applicationId "com.example.onlineshop"
-        minSdkVersion 22
+        minSdkVersion 28
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -65,5 +65,7 @@ dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:28.0.1')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+
+    implementation 'com.etebarian:meow-bottom-navigation:1.3.1'
 
 }
